--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <div class="col-sm-4">
                             <div class="fact-item">
                                 <h4 class="fs-1 fw-bold">2</h4>
-                                <p class="text-muted">Years of Experience</p>
+                                <p class="text-muted">VA Years of Experience</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
