--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="row text-center text-uppercase my-3">
                         <div class="col-sm-4">
                             <div class="fact-item">
-                                <h4 class="fs-1 fw-bold">2</h4>
+                                <h4 class="fs-1 fw-bold">2+</h4>
                                 <p class="text-muted">VA Years Experience</p>
                             </div>
                         </div>
