--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="projects-item">
                         <img src="./photos/LeadGen-Email.png" class="w-100 img-thumbnail" alt="A project item.">
-                        <h3 class="text-capitalize fs-5 my-2">Find the Email</h3>
+                        <h3 class="text-capitalize fs-5 my-2">Lead Generation - Find the Email</h3>
                         <p class="mb-4"><a href="https://docs.google.com/spreadsheets/d/1-pHribFbeRUexrWATIRJsTCQOkmuocSQeGLO3GfeOqY/edit?usp=sharing" target="_blank" class="text-danger text-decoration-none">Live Demo</a></p>
                     </div>
                 </div>
