--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <li><a class="dropdown-item" href="./index.html#home">Home</a></li>
                     <li><a class="dropdown-item" href="./index.html#about">About</a></li>
                     <li><a class="dropdown-item" href="./index.html#projects">Projects</a></li>
+                    <li><a class="dropdown-item" href="./index.html#certificates">Certificates</a></li>
                     <li><a class="dropdown-item" href="./index.html#contact">Contact</a></li>
                 </ul>
             </div>
@@ -188,6 +189,28 @@
                         <img src="./photos/LeadGen-ScreenShot.png" class="w-100 img-thumbnail" alt="A project item.">
                         <h3 class="text-capitalize fs-5 my-2">Lead Generation - Screenshots</h3>
                         <p class="mb-4"><a href="https://docs.google.com/spreadsheets/d/1-pHribFbeRUexrWATIRJsTCQOkmuocSQeGLO3GfeOqY/edit?usp=sharing" target="_blank" class="text-danger text-decoration-none">Live Demo</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- certificates -->
+    <section class="certificates py-5" id="certificates">
+        <div class="container-lg py-4">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="section-title text-center">
+                        <h2 class="fw-bold mb-5">Trainings Attended</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-4">
+                    <div class="certificates-item">
+                        <img src="./photos/RISE.JPG" class="w-100 img-thumbnail" alt="A certification item.">
+                        <h3 class="text-capitalize fs-5 my-2">Entrepreneurship and Financial</h3>
+                        <p class="mb-4"><a href="https://drive.google.com/file/d/1bEwT4CxXndu126jPhdDQINCSKHqpmUmR/view?usp=sharing" target="_blank" class="text-danger text-decoration-none">Live Demo</a></p>
                     </div>
                 </div>
             </div>
