--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </nav>
 
-    <!-- hoe -->
+    <!-- home -->
     <section class="home py-5" id="home">
         <div class="container-lg">
             <div class="row min-vh-100 align-items-center align-content-center">
