--- a/index.html
+++ b/index.html
@@ -214,6 +214,24 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-4">
+                    <div class="certificates-item">
+                        <img src="./photos/RISE.JPG" class="w-100 img-thumbnail" alt="A certification item.">
+                        <h3 class="text-capitalize fs-5 my-2">Amazon CSR Program</h3>
+                        <p class="mb-4"><a href="https://drive.google.com/file/d/1iKouP-Q0ftFJFOdJfrW4EM5Lm-gN-Qeb/view?usp=sharing" target="_blank" class="text-danger text-decoration-none">Live Demo</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-4">
+                    <div class="certificates-item">
+                        <img src="./photos/RISE.JPG" class="w-100 img-thumbnail" alt="A certification item.">
+                        <h3 class="text-capitalize fs-5 my-2">E-commerce & LeadGen</h3>
+                        <p class="mb-4"><a href="https://drive.google.com/file/d/1WI66f06sUpsyL2f1RbUcWhSewd6q3W0y/view?usp=drive_link" target="_blank" class="text-danger text-decoration-none">Live Demo</a></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     
