--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <li><a class="dropdown-item" href="./index.html#home">Home</a></li>
                     <li><a class="dropdown-item" href="./index.html#about">About</a></li>
                     <li><a class="dropdown-item" href="./index.html#projects">Projects</a></li>
-                    <li><a class="dropdown-item" href="./index.html#certificates">Certificates</a></li>
+                    <li><a class="dropdown-item" href="./index.html#certificates">Skills</a></li>
                     <li><a class="dropdown-item" href="./index.html#contact">Contact</a></li>
                 </ul>
             </div>
@@ -201,7 +201,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section-title text-center">
-                        <h2 class="fw-bold mb-5">Trainings Attended</h2>
+                        <h2 class="fw-bold mb-5">Key Skills & Certifications</h2>
                     </div>
                 </div>
             </div>
@@ -285,7 +285,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-7">
+<! --           <div class="col-md-7">
                     <div class="contact-form">
                         <form>
                             <div class="row">
@@ -313,7 +313,7 @@
                             </div>
                         </form>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
