--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         </div>
                         <div class="text ms-3">
                             <h3 class="fs-5">Email</h3>
-                            <p class="text-muted">laganzohelen@gmial.com</p>
+                            <p class="text-muted">laganzohelen@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item d-flex mb-3">
@@ -285,7 +285,7 @@
                         </div>
                     </div>
                 </div>
-<! --           <div class="col-md-7">
+<! --<div class="col-md-7">
                     <div class="contact-form">
                         <form>
                             <div class="row">
@@ -313,7 +313,7 @@
                             </div>
                         </form>
                     </div>
-                </div> -->
+                </div>-->
             </div>
         </div>
     </section>
