--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         </div>
                     </div>
                 </div>
-<! --<div class="col-md-7">
+                <div class="col-md-7">
                     <div class="contact-form">
                         <form>
                             <div class="row">
@@ -313,7 +313,7 @@
                             </div>
                         </form>
                     </div>
-                </div>-->
+                </div>
             </div>
         </div>
     </section>
