--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <div class="social-links">
                                 <a href="https://www.linkedin.com/in/helenalags/" target="_blank" class="text-dark me-2"><i class="bi-linkedin"></i></a>
                                 <a href="https://www.facebook.com/twiceisenoughforwise" target="_blank" class="text-dark me-2"><i class="bi-facebook"></i></a>
-                                <a href="https://www.onlinejobs.ph/jobseekers/info/1026872" target="_blank"><img src="https://www.onlinejobs.ph/images/banner-jobseeker-88x31.jpg" alt="OnlineJobs.ph Banner 88x31"/></a>
+                                <a href="https://www.onlinejobs.ph/jobseekers/info/1026872" target="_blank" rel="noopener noreferrer"><img src="https://www.onlinejobs.ph/images/banner-jobseeker-88x31.jpg" alt="OnlineJobs.ph Banner 88x31"/></a>
                             </div>
                         </div>
                     </div>
